--- a/index.html
+++ b/index.html
@@ -62,38 +62,43 @@
 					<!-- Logo
 					============================================= -->
 					<div id="logo" class="">
-						<a href="index.html" class="standard-logo"><img src="demos/recipes/images/logo.png" alt="Canvas Logo"></a>
-						<a href="index.html" class="retina-logo"><img src="demos/recipes/images/logo@2x.png" alt="Canvas Logo"></a>
+						<a href="index.html" class="standard-logo"><img src="demos/recipes/images/logo.png" alt="MyFoodScanner Logo"></a>
+						<a href="index.html" class="retina-logo"><img src="demos/recipes/images/logo@2x.png" alt="MyFoodScanner Logo"></a>
 					</div><!-- #logo end -->
 
 					<!-- Primary Navigation
 					============================================= -->
 					<nav id="primary-menu">
 
-						<ul>
-							<li class="current"><a href="#"><div>Home</div></a></li>
-							<li><a href="demos/recipes/about-us.html"><div>About Us</div></a></li>
-							<li><a href="demos/recipes/recipes.html"><div>Recipes <i class="icon-angle-down1 d-none d-lg-inline-block"></i></div></a>
-								<ul class="rounded-bottom">
-									<li><a href="demos/recipes/recipe-single.html"><div>Recipe Single Page</div></a></li>
-									 <div class="dropdown-divider my-0"></div>
-									<li><a href="demos/recipes/recipes.html"><div>Popular</div></a></li>
-									<li><a href="demos/recipes/recipes.html"><div>Recent</div></a></li>
-									<li><a href="demos/recipes/recipes.html"><div>Most liked</div></a></li>
-									<li><a href="demos/recipes/recipes.html"><div>Most Commented</div></a></li>
-								</ul>
-							</li>
-							<li><a href="demos/recipes/contact.html"><div>Contact Us</div></a></li>
-						</ul>
-
 						<!-- Top Search
 						============================================= -->
 						<div id="top-search">
 							<a href="#" id="top-search-trigger"><i class="icon-search3"></i><i class="icon-line-cross"></i></a>
 							<form action="search.html" method="get">
-								<input type="text" name="q" class="form-control" value="" placeholder="Type &amp; Hit Enter..">
+								<input type="text" name="q" class="form-control" value="" placeholder="Digite o Produto &amp; Aperte Enter..">
 							</form>
 						</div><!-- #top-search end -->
+
+						<ul>
+							<li class="current"><a href="#"><div>Home</div></a></li>
+							<li><a href="demos/recipes/about-us.html"><div>Sobre</div></a></li>
+							<li><a href="demos/recipes/recipes.html"><div>Produtos <i class="icon-angle-down1 d-none d-lg-inline-block"></i></div></a>
+								<ul class="rounded-bottom">
+									<li><a href="demos/recipes/recipe-single.html"><div>Pagina Produto</div></a></li>
+									 <div class="dropdown-divider my-0"></div>
+									<li><a href="demos/recipes/recipes.html"><div>Popular</div></a></li>
+									<li><a href="demos/recipes/recipes.html"><div>Recentes</div></a></li>
+									<li><a href="demos/recipes/recipes.html"><div>Mais Votados</div></a></li>
+									<li><a href="demos/recipes/recipes.html"><div>Mais Comentados</div></a></li>
+								</ul>
+							</li>
+							<li><a href="demos/recipes/contact.html"><div>Fale Conosco</div></a></li>
+						</ul>
+
+
+
+						
+						
 
 					</nav><!-- #primary-menu end -->
 
