--- a/demos/recipes/recipe-single.html
+++ b/demos/recipes/recipe-single.html
@@ -26,7 +26,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Recipe Single - Recipes | Canvas</title>
+	<title>Produto | MyFood</title>
 
 </head>
 
@@ -59,19 +59,19 @@
 
 						<ul>
 							<li><a href="../../index.html"><div>Home</div></a></li>
-							<li><a href="about-us.html"><div>Sobre</div></a></li>
-							<li class="current"><a href="recipes.html"><div>Produtos <i class="icon-angle-down1 d-none d-lg-inline-block"></i></div></a>
+							
+							<li class="current"><a href="produtos.html"><div>Produtos <i class="icon-angle-down1 d-none d-lg-inline-block"></i></div></a>
 								<ul class="rounded-bottom">
 									<li class="current"><a href="#"><div>Pagina Demo</div></a></li>
 									 <div class="dropdown-divider my-0"></div>
-									<li><a href="recipes.html"><div>Popular</div></a></li>
-									<li><a href="recipes.html"><div>Recente</div></a></li>
-									<li><a href="recipes.html"><div>Mais Votado</div></a></li>
-									<li><a href="recipes.html"><div>Mais Comentado</div></a></li>
+									<li><a href="produtos.html"><div>Popular</div></a></li>
+									<li><a href="produtos.html"><div>Recente</div></a></li>
+									<li><a href="produtos.html"><div>Mais Votado</div></a></li>
+									<li><a href="produtos.html"><div>Mais Comentado</div></a></li>
 								</ul>
 							</li>
 							<li><a href="contact.html"><div>Fale Conosco</div></a></li>
-							<li><a href="contact.html"><div>Perfil</div></a></li>
+							<li><a href="perfil.html"><div>Perfil</div></a></li>
 						</ul>
 
 						<!-- Top Search
