--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Recipes | Canvas</title>
+	<title>MyFood | Site</title>
 
 </head>
 
@@ -81,15 +81,15 @@
 
 						<ul>
 							<li class="current"><a href="#"><div>Home</div></a></li>
-							<li><a href="demos/recipes/about-us.html"><div>Sobre</div></a></li>
+							
 							<li><a href="demos/recipes/recipes.html"><div>Produtos <i class="icon-angle-down1 d-none d-lg-inline-block"></i></div></a>
 								<ul class="rounded-bottom">
 									<li><a href="demos/recipes/recipe-single.html"><div>Pagina Demo</div></a></li>
 									 <div class="dropdown-divider my-0"></div>
-									<li><a href="demos/recipes/recipes.html"><div>Popular</div></a></li>
-									<li><a href="demos/recipes/recipes.html"><div>Recentes</div></a></li>
-									<li><a href="demos/recipes/recipes.html"><div>Mais Votados</div></a></li>
-									<li><a href="demos/recipes/recipes.html"><div>Mais Comentados</div></a></li>
+									<li><a href="demos/recipes/produtos.html"><div>Popular</div></a></li>
+									<li><a href="demos/recipes/produtos.html"><div>Recentes</div></a></li>
+									<li><a href="demos/recipes/produtos.html"><div>Mais Votados</div></a></li>
+									<li><a href="demos/recipes/produtos.html"><div>Mais Comentados</div></a></li>
 								</ul>
 							</li>
 							<li><a href="demos/recipes/contact.html"><div>Fale Conosco</div></a></li>
