--- a/demos/recipes/about-us.html
+++ b/demos/recipes/about-us.html
@@ -26,7 +26,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>About Us - Recipes | Canvas</title>
+	<title>Sobre | MyFood</title>
 
 </head>
 
@@ -49,8 +49,8 @@
 					<!-- Logo
 					============================================= -->
 					<div id="logo">
-						<a href="../../demo-recipes.html" class="standard-logo"><img src="images/logo.png" alt="Canvas Logo"></a>
-						<a href="../../demo-recipes.html" class="retina-logo"><img src="images/logo@2x.png" alt="Canvas Logo"></a>
+						<a href="../../index.html" class="standard-logo"><img src="images/logo.png" alt="Canvas Logo"></a>
+						<a href="../../index.html" class="retina-logo"><img src="images/logo@2x.png" alt="Canvas Logo"></a>
 					</div><!-- #logo end -->
 
 					<!-- Primary Navigation
@@ -59,18 +59,19 @@
 
 						<ul>
 							<li><a href="../../demo-recipes.html"><div>Home</div></a></li>
-							<li class="current"><a href="#"><div>About Us</div></a></li>
-							<li><a href="recipes.html"><div>Recipes <i class="icon-angle-down1 d-none d-lg-inline-block"></i></div></a>
+							
+							<li><a href="produtos.html"><div>Produtos <i class="icon-angle-down1 d-none d-lg-inline-block"></i></div></a>
 								<ul class="rounded-bottom">
-									<li><a href="recipe-single.html"><div>Recipe Single Page</div></a></li>
+									<li><a href="recipe-single.html"><div>Produto Demo</div></a></li>
 									 <div class="dropdown-divider my-0"></div>
-									<li><a href="recipes.html"><div>Popular</div></a></li>
-									<li><a href="recipes.html"><div>Recent</div></a></li>
-									<li><a href="recipes.html"><div>Most liked</div></a></li>
-									<li><a href="recipes.html"><div>Most Commented</div></a></li>
+									<li><a href="produtos.html"><div>Popular</div></a></li>
+									<li><a href="produtos.html"><div>Recente</div></a></li>
+									<li><a href="produtos.html"><div>Mais Votado</div></a></li>
+									<li><a href="produtos.html"><div>Mais Comentado</div></a></li>
 								</ul>
 							</li>
-							<li><a href="contact.html"><div>Contact Us</div></a></li>
+							<li><a href="contact.html"><div>Fale Conosco</div></a></li>
+							<li><a href="perfil.html"><div>Perfil</div></a></li>
 						</ul>
 
 						<!-- Top Search
