--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 								</ul>
 							</li>
 							<li><a href="demos/recipes/contact.html"><div>Fale Conosco</div></a></li>
-							<li><a href="demos/recipes/contact.html"><div>Sign In</div></a></li>
+							<li><a href="demos/recipes/perfil.html"><div>Sign In</div></a></li>
 						</ul>
 
 
