Perfil Switch Fix
Fix de script no toggle do switch

--- a/demos/recipes/perfil.html
+++ b/demos/recipes/perfil.html
@@ -426,6 +426,12 @@
 			jQuery( '.flexslider .slide' ).resize();
 		});
 	</script>
+	
+	<script>
+
+		jQuery(".bt-switch").bootstrapSwitch();
+
+	</script>
 
 </body>
 </html>
