--- a/admin/index.html
+++ b/admin/index.html
@@ -415,7 +415,7 @@
                           </td>
                           <td class="py-1">
                             <img src="images/faces/face1.jpg" class="mr-2" alt="image">
-                            David Grey
+                            Caique
                           </td>
                           <td>
                             <label class="badge badge-gradient-success">DONE</label>
@@ -439,7 +439,7 @@
                           </td>
                           <td class="py-1">
                             <img src="images/faces/face2.jpg" class="mr-2" alt="image">
-                            Stella Johnson
+                            Thalita S.
                           </td>
                           <td>
                             <label class="badge badge-gradient-warning">PROGRESS</label>
@@ -487,7 +487,7 @@
                           </td>
                           <td class="py-1">
                             <img src="images/faces/face4.jpg" class="mr-2" alt="image">
-                            John Doe
+                            Arthur
                           </td>
                           <td>
                             <label class="badge badge-gradient-success">DONE</label>
