Pagina Product Admin

--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
 				<div id="rev_slider_2_1" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.8.1">
 					<ul>
 						<!-- SLIDE  -->
-						<li  data-index="rs-7" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="300"  data-thumb="demos/recipes/images/slider/1/100x50-bg.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
+						<li  data-index="rs-7" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="on"  data-easein="default" data-easeout="default" data-masterspeed="300"  data-thumb="demos/recipes/images/slider/1/100x50-bg.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 							<!-- MAIN IMAGE -->
 							<img src="demos/recipes/images/slider/dummy.png"  alt="" data-duration="6000" data-lazyload="demos/recipes/images/slider/1/bg.jpg" data-bgposition="center center"  data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
 							<!-- LAYERS -->
 
 							<!-- LAYER NR. 1 -->
-							<h3 class="tp-caption font-primary tp-resizeme"
+							<h3 class="tp-caption font-primary tp-resizeme dark"
 								 id="slide-7-layer-13-1"
 								 data-x="['left','left','middle','middle']" data-hoffset="['0','30','0','0']"
 								 data-y="['top','top','top','top']" data-voffset="['225','165','45','10']"
@@ -138,7 +138,7 @@
 								data-frames='[{"delay":1200,"split":"words","splitdelay":0.05,"speed":1000,"split_direction":"forward","frame":"0","from":"x:50px;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power3.easeInOut"},{"delay":"wait","split":"words","splitdelay":0.02,"speed":300,"split_direction":"backward","frame":"999","to":"auto:auto;fb:0;","ease":"Power3.easeInOut"}]'
 								data-textAlign="['inherit','inherit','inherit','inherit']"
 
-								style="z-index: 7; white-space: nowrap; font-size: 54px; line-height: 54px; letter-spacing: 0px; color:#FFF">Coca-Cola Lata 350ml </h3>
+								style="z-index: 7; white-space: nowrap; font-size: 54px; line-height: 54px; letter-spacing: 0px; color:#FFF ">Coca-Cola Lata 350ml </h3>
 
 							<!-- LAYER NR. 2 -->
 							<p class="tp-caption Restaurant-Description  tp-resizeme"
