--- a/admin/index.html
+++ b/admin/index.html
@@ -208,7 +208,7 @@
               </a>
               <div class="collapse" id="ui-basic">
                 <ul class="nav flex-column sub-menu">
-                  <li class="nav-item"> <a class="nav-link" href="ingredient.html">Products</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="product.html">Products</a></li>
                   <li class="nav-item"> <a class="nav-link" href="ingredient.html">Ingredients</a></li>
                   <li class="nav-item"> <a class="nav-link" href="ingredient.html">Nutrients</a></li>
                 </ul>
